--- a/Projects/ELife/index.html
+++ b/Projects/ELife/index.html
@@ -50,9 +50,8 @@
                     <div class="section-inner">
                         <h2 class="heading"> Elife </h2>
 
-                        <p>This is the eletronic life project from the book <a href="http://eloquentjavascript.net/" >Eloquent JavaScript</a> which the idea is to create a "world simulator". Right now, this world consists of two simple things: Walls (represented by the "#") and Critters (represented by the "o"). Critters move in a single direction ultil they hit a wall, then it will switch directions.</p>
-                        <p>Right now I've only added a couple of things. First of all I modulated the code so it would be easier to understand and would feel more like the object-oriented way of programming I am used to. Second of all I added the option of letting the user define their world instead of using a pre-defined one.</p>
-                        <p>To modulate the code, I used the <a href="http://github.com/jrburke/requirejs">require.js</a>, then I broke the code into separate .js files, using the following structure:</p>
+                        <p>This is the eletronic life project from the book <a href="http://eloquentjavascript.net/" >Eloquent JavaScript</a> which the idea is to create a "world simulator". Right now, this world consists of two simple things: Walls (represented by the "#"), Critters (represented by the "o") and Wallfollowers (represented by the "~"). Critters move in a single direction until they hit a wall, then it will switch directions. Wallfollowers will always move next to a wall </p>
+                        <p>Right now I've only added a couple of things. First of all I added the option to run it on my own page and the option for the user to create a custum map
 
 
                         <div id = "myDIV">
