--- a/assets/html/header.html
+++ b/assets/html/header.html
@@ -1,5 +1,5 @@
 
-<a href="/en/"><img class="profile-image img-responsive pull-left" src="/assets/images/fotoperfil.png" alt="Daniel Pereira"/></a>
+<a href="/"><img class="profile-image img-responsive pull-left" src="/assets/images/fotoperfil.png" alt="Daniel Pereira"/></a>
 <div class="profile-content pull-left">
     <h1 class="name">Daniel de Araujo Pereira</h1>
     <h2 class="desc">Industrial Engineer Undergrad Student</h2>   
