--- a/Projects/index.html
+++ b/Projects/index.html
@@ -31,9 +31,8 @@
     <![endif]-->
     <script type="text/javascript" src="/assets/plugins/jquery-1.11.2.min.js"></script>
     <script>
-    $(function(){
-    $("#second").load("/assets/html/secondary.html"); 
-    });
+    $(function(){$("#second").load("/assets/html/secondary.html");});
+    $(function(){$("#head").load("/assets/html/header.html");});
     </script>
 
 
