--- a/Projects/ELife/index.html
+++ b/Projects/ELife/index.html
@@ -51,7 +51,9 @@
                         <h2 class="heading"> Elife </h2>
 
                         <p>This is the eletronic life project from the book <a href="http://eloquentjavascript.net/" >Eloquent JavaScript</a> which the idea is to create a "world simulator". Right now, this world consists of two simple things: Walls (represented by the "#"), Critters (represented by the "o") and Wallfollowers (represented by the "~"). Critters move in a single direction until they hit a wall, then it will switch directions. Wallfollowers will always move next to a wall </p>
-                        <p>Right now I've only added a couple of things. First of all I added the option to run it on my own page and the option for the user to create a custum map
+                        <p>Right now I've only added a couple of things. First of all I added the option to run it on my own page and the option for the user to create a custum map. I plan to add some other things with time, like modulating the code and new functionalities in the world.<p>
+
+                        <p><a href="https://github.com/ddearauj/Elife"><i class="fa fa-github-alt"></i></a><a href="https://github.com/ddearauj/Elife">  Project Github</a></p> 
 
 
                         <div id = "myDIV">
