--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                         <h2 class="heading">Lerning Projects</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title"><a href="#">Projects From the Eloquent JS book</a></h3>
+                                <h3 class="title"><a href="Projects/ELife">Projects From the Eloquent JS book</a></h3>
                                 <p class="summary">Projects from the book with some added functionality to try things out</p>
-                                <p><a class="more-link" href="#" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
+                                <p><a class="more-link" href="Projects/ELife" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
                             </div><!--//item-->
                         </div>
                     </div>
