--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div class="content">
                             <div class="item">
                                 <h3 class="title"> Strategic Pricing Analyst, Summer Intern - SP, Brazil - <span class="place"><a href="https://www.itau.com.br/">Itaú-Unibanco</a></span> <span class="year">(Dec/2015 - Present)</span></h3>
-                                <p>Developing an automated report containing the analysis of the most recent strategy implemented by the bank. Understanding the affects on our production as well as tracing a plan of action for each platform based on the information gathared.</p>
+                                <p>Developing an automated report containing the analysis of the most recent strategy implemented by the bank. Understanding the affects on our production as well as tracing a plan of action for each platform based on the information gathered.</p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Subsea Hardware Engineer, Summer Intern - Houston, TX - <span class="place"><a href="http://www.shell.com/">Shell International Exploration and Production Inc</a></span> <span class="year">(May/15 - Aug/15)</span></h3>
