--- a/Projects/index.html
+++ b/Projects/index.html
@@ -40,22 +40,7 @@
 
 <body>
     <!-- ******HEADER****** --> 
-    <header class="header">
-        <div class="container">
-            <a href="/"><img class="profile-image img-responsive pull-left" src="/assets/images/fotoperfil.png" alt="Daniel Pereira"/></a>
-            <div class="profile-content pull-left">
-                <h1 class="name">Daniel de Araujo Pereira</h1>
-                <h2 class="desc">Industrial Engineer Undergrad Student</h2>   
-                <ul class="social list-inline">
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>                   
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li><a href="https://br.linkedin.com/in/dpereira14"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://github.com/ddearauj"><i class="fa fa-github-alt"></i></a></li>                  
-                    <li class="last-item"><a href="#"><i class="fa fa-hacker-news"></i></a></li>                 
-                </ul> 
-            </div><!--//profile-->
-            <a class="btn btn-cta-primary pull-right" href="http://themes.3rdwavemedia.com/" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>
-        </div>
+    <header class="header" id="head">
     </header><!--//header-->
     
     <div class="container sections-wrapper">
