--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 
                 <section class="projects section">
                     <div class="section-inner" id = "learnProj">
-                        <h2 class="heading">Lerning Projects</h2>
+                        <h2 class="heading">Learning Projects</h2>
                         <div class="content">
                             <div class="item">
                                 <h3 class="title"><a href="Projects/ELife">Projects From the Eloquent JS book</a></h3>
