--- a/contos/index.html
+++ b/contos/index.html
@@ -50,7 +50,7 @@
 				<a href="./app" class="image"><img src="images/sss2.png" alt=""/></a>
 				<div class="inner">
 					<header>
-						<h2>App</h2>
+						<h2>VI. App</h2>
 					</header>
 					<p>Um dia vai ter uma chamada super legal e você vai querer clicar na foto para ler o conto</p>
 				</div>
@@ -60,7 +60,7 @@
 				<a href="./reabilitacao" class="image"><img src="images/reabilitacao.jpg" alt=""/></a>
 				<div class="inner">
 					<header>
-						<h2>Reabilitacao</h2>
+						<h2>V. Reabilitacao</h2>
 					</header>
 					<p>Um dia vai ter uma chamada super legal e você vai querer clicar na foto para ler o conto</p>
 				</div>
@@ -70,7 +70,7 @@
 				<a href="./caminhada" class="image"><img src="images/caminhada.jpg" alt=""/></a>
 				<div class="inner">
 					<header>
-						<h2>A Caminhada</h2>
+						<h2>IV. A Caminhada</h2>
 					</header>
 					<p>Um dia vai ter uma chamada super legal e você vai querer clicar na foto para ler o conto</p>
 				</div>
@@ -80,7 +80,7 @@
 				<a href="./navegacao" class="image fit"><img src="images/navegacao.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Nevegação</h2>
+						<h2>III. Nevegação</h2>
 					</header>
 					<p>Um dia vai ter uma chamada super legal e você vai querer clicar na foto para ler o conto</p>
 				</div>
@@ -89,7 +89,7 @@
 				<a href="./transatlanticismo" class="image fit"><img src="images/transatlanticismo.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Transatlanticismo</h2>
+						<h2>II. Transatlanticismo</h2>
 					</header>
 					<p>Um dia vai ter uma chamada super legal e você vai querer clicar na foto para ler o conto</p>
 				</div>
@@ -98,7 +98,7 @@
 				<a href="./queda" class="image fit"><img src="images/queda.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>A Queda</h2>
+						<h2>I. A Queda</h2>
 					</header>
 					<p>Um dia vai ter uma chamada super legal e você vai querer clicar na foto para ler o conto</p>
 				</div>
