--- a/Projects/Jogo/index.html
+++ b/Projects/Jogo/index.html
@@ -3,13 +3,13 @@
 <!doctype html>
 <script src="./main.js"></script>
 <script src="./game_levels.js"></script>
-<script src="./16_canvas.js"></script>
+<script src="./canvas.js"></script>
 
 
 <!--<link rel="stylesheet" href="./game.css"> -->
 
 <body>
   <script>
-    runGame(GAME_LEVELS, CanvasDisplay);
+    runGame(GAME_LEVELS, CanvasDisplay, Game);
   </script>
 </body>
