--- a/Projects/Jogo/index.html
+++ b/Projects/Jogo/index.html
@@ -58,7 +58,7 @@
                             runGame(GAME_LEVELS, CanvasDisplay, Game);
                         </script>
                         </div>
-                        <div class = 'log'></div>
+                        <div class = "log"></div>
 
 
                         </div>
