--- a/index.html
+++ b/index.html
@@ -117,12 +117,13 @@
                 
                 <section class="projects section">
                     <div class="section-inner" id = "learnProj">
-                        <h2 class="heading">Learning Projects</h2>
+                        <h2 class="heading">JavaScript Learning Projects</h2>
                         <div class="content">
                             <div class="item">
                                 <h3 class="title"><a href="Projects/ELife">Projects From the Eloquent JS book</a></h3>
                                 <p class="summary">Projects from the book with some added functionality to try things out</p>
-                                <p><a class="more-link" href="Projects/ELife" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
+                                <p><a class="more-link" href="Projects/ELife" target="_blank"><i class="fa fa-external-link"></i> Elife</a></p>
+                                <p><a class="more-link" href="Projects/Jogo" target="_blank"><i class="fa fa-external-link"></i> 2D Platformer</a></p>
                             </div><!--//item-->
                         </div>
                     </div>
