--- a/Projects/Jogo/index.html
+++ b/Projects/Jogo/index.html
@@ -47,13 +47,15 @@
                     <div class="section-inner">
                         <h2 class="heading"> Platformer </h2>
 
-                        <p>This is the platformer game project from the book <a href="http://eloquentjavascript.net/" >Eloquent JavaScript</a> I've added the lives system to the game. The player starts with 3 lives and if he loses them all, he returns to the first level</p>
+                        <div class ="content">
+                            <p>This is the platformer game project from the book <a href="http://eloquentjavascript.net/" >Eloquent JavaScript</a> I've added the lives system to the game. The player starts with 3 lives and if he loses them all, he returns to the first level</p>
 
-                        <p><a href="https://github.com/ddearauj/pagina/tree/gh-pages/Projects/Jogo"><i class="fa fa-github-alt"></i></a><a href="https://github.com/ddearauj/pagina/tree/gh-pages/Projects/Jogo">  Project Github</a></p> 
+                            <p><a href="https://github.com/ddearauj/pagina/tree/gh-pages/Projects/Jogo"><i class="fa fa-github-alt"></i></a><a href="https://github.com/ddearauj/pagina/tree/gh-pages/Projects/Jogo">  Project Github</a></p> 
 
-                        <p><a href ="./plat" ></a>
+                            <p><a href ="./plat" ></a>
 
-                        <div class = "log"></div>
+                            <div class = "log"></div>
+                        </div>
 
                         </div>
                         <div class="content">
