--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                     <div class="section-inner" id="perfil">
                         <h2 class="heading">About me</h2>
                         <div class="content">
-                            <p>Passionate about state of the art technology and understanding how it relates and shapes the market and our daily lives. I am an Industrial Engineering Undergraduate Student in the Universidade Estadual de Campinas (UNICAMP), Brazil. Between Fall/14 and Fall/15 I was awarded with a full scholarship exchange program by the Brazilian Government to study at Purdue University and during the summer I was hired by Shell International Exploration and Production Inc. as a Subsea Hardware Engineer Summer Intern.</p>
+                            <p>Passionate about state of the art technology and understanding how it relates and shapes the market and our daily lives. I am an Industrial Engineering Undergraduate Student in the Universidade Estadual de Campinas (UNICAMP), Brazil. I currently intern at Cielo as a Business Analyst. Working daily with data visualization and data analysis. Between Fall/14 and Fall/15 I was awarded with a full scholarship exchange program by the Brazilian Government to study at Purdue University and during the summer I was hired by Shell International Exploration and Production Inc. as a Subsea Hardware Engineer Summer Intern.</p>
 
-                            <p>University really peaked my interest in software development and algorithms. During my sophomore and junior years, I developed an year long <span><a href="Projects/IC">research</a><span> with UNICAMP's Electrical and Computer Engineering School on Blind Signal Separation using bio-inspired computation.</p>
+                            <p>University really peaked my interest in software in Machine Learning and algorithms. During my sophomore and junior years, I developed an year long <span><a href="Projects/IC">research</a><span> with UNICAMP's Electrical and Computer Engineering School on Blind Signal Separation using bio-inspired computation.</p>
 
                             <p> I've always been interested and involved with volunteer work. At UNICAMP this was translated by founding along with some friends the first Chapter of the Engineers Without Borders - Brazil in the state of São Paulo in September of 2013, where I worked for a year as Strategic Management and People Advisor. I also taught World History in UNICAMP's School of Applied Sciences community prep school aimed to reach high school students who could not afford a prep school</p>
 
@@ -134,7 +134,12 @@
                         <h2 class="heading">Professional Experience</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title"> Strategic Pricing Analyst, Summer Intern - SP, Brazil - <span class="place"><a href="https://www.itau.com.br/">Itaú-Unibanco</a></span> <span class="year">(Dec/2015 - Present)</span></h3>
+                                <h3 class="title"> Business Analytics Intern - SP, Brazil - <span class="place"><a href="https://www.cielo.com.br/">Cielo</a></span> <span class="year">(Mar/2016 - Present)</span></h3>
+                                <p> Design studies and reports for internal and external clients. Managing data with SAS, Python or Excel and using Tableau to generate a data visualization tool for our end-user
+                                </p>
+                            </div><!--//item-->
+                            <div class="item">
+                                <h3 class="title"> Strategic Pricing Analyst, Summer Intern - SP, Brazil - <span class="place"><a href="https://www.itau.com.br/">Itaú-Unibanco</a></span> <span class="year">(Dec/2015 - Feb/2015)</span></h3>
                                 <p>Developing an automated report containing the analysis of the most recent strategy implemented by the bank. Understanding the affects on our production as well as tracing a plan of action for each platform based on the information gathered.</p>
                             </div><!--//item-->
                             <div class="item">
