--- a/assets/html/secondary.html
+++ b/assets/html/secondary.html
@@ -45,12 +45,19 @@
 </div>                                      
 </div>                              
 <div class="item"><!--//item-->
-<h3 class="level-title">JavaScript & jQuery<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Beginner</span></h3>
+<h3 class="level-title">Python<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Beginner</span></h3>
 <div class="level-bar">
 <div class="level-bar-inner" data-level="40%">
 </div>                                      
 </div><!--//level-bar-->                             
-</div>              
+</div>
+<div class="item"><!--//item-->
+<h3 class="level-title">SAS<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Beginner</span></h3>
+<div class="level-bar">
+<div class="level-bar-inner" data-level="40%">
+</div>                                      
+</div><!--//level-bar-->                             
+</div>                
 </div><!--//content-->  
 </div><!--//section-inner-->                 
 </aside><!--//section-->
