--- a/contos/reabilitacao.html
+++ b/contos/reabilitacao.html
@@ -48,6 +48,10 @@
 
 				<p>O único problema é drogas são mais fáceis de superar. Digo, elas não ligam atrás de você. Não batem na porta da sua casa prometendo que dessa vez a alta seria legal e argumentando de modo completamente lógico – pelo menos para ele – que ela falava a verdade. Talvez o jeito seja, por enquanto, continuar deitado.</p>
 
+				<p>Depois de alguns meses, ele percebeu que sua teoria estava esquivocada. Por que, depois desse tempo todo, ele estava muito pior sem ela. Apesar de ter a mesma silhueta que ela, uma voz tão macia e aconchegante como a de sua amada, entretanto traiçoeira, não era ela sua sedutora, mas sim uma das serias que nadavam nas profundezas mais obscuras de sua alma agitada. A sombra dessa criatura imitava os movimentos da verdadeira, fazendo com que ele mesclasse as imagens.  </p>
+
+				<p>Aquele ser tornou a seduzi-lo. Quando ele ia se deitar, ela o envolvia em seus tentaculos, alimentando-se de sua força. Ao mesmo tempo que ele era abraçado ele sentia-se mais frio. Como se o calor de seu corpo estivesse sendo roubado pela sereia enquanto ela sussurrava promessas mentirosas. Suas forças se esgotavam e ele ficava preso a ela e até mesmo se acostumando com sua companhia. A mulher não aguentava mais clamar para que ele paresse de traí-la e voltasse para ela. Que saísse da cama e vivesse. Mas depois de todo esse tempo e manipulação, a sereia os afastou e ele só percebeu tarde demais o erro que havia cometido</p>
+
 			</section>
 			<footer>
 				<a href="./index.html" class="button">Pagina Inicial</a>
