--- a/contos/index.html
+++ b/contos/index.html
@@ -52,7 +52,7 @@
 					<header>
 						<h2>Poema Saudade</h2>
 					</header>
-					<p>Sei que aqui são contos, mas sei la. Deu vontade</p>
+					<p>Sei que aqui são contos, mas sei la. Deu vontade. Espero não ser tão ruim assim</p>
 				</div>
 			</article>
 			<article id="second" class="container box style1 left">
