--- a/contos/index.html
+++ b/contos/index.html
@@ -47,7 +47,7 @@
 			</section>
 		-->
 			<article id="first" class="container box style1 left">
-				<a href="./saudadePoema" class="image"><img src="images/sss2.png" alt=""/></a>
+				<a href="./saudadePoema" class="image"><img src="images/solitude.jpg" alt=""/></a>
 				<div class="inner">
 					<header>
 						<h2>Poema Saudade</h2>
