--- a/contos/saudadePoema.html
+++ b/contos/saudadePoema.html
@@ -31,9 +31,9 @@
 			<section>
 
 <p>Sem duvida sinto falta da forma que nossos corpos formavam formas de forma uniforme.</p>
-<p>De quando que nos tornamos um o mundo inteiro some.</p>
+<p>De que quando nos tornavamos um o mundo inteiro sumia.</p>
 <p>De que seu rosto amassado e cabelo bagunçado eram as primeiras coisas que via ao acordar.</p>
-<p>De quão belo eram seus duetos mesmo sem ambos saberem cantar.</p>
+<p>De quão belo eram nossos duetos mesmo sem ambos saberem cantar.</p>
 <br></br>
 <p>Lembra das fotos que tiramos na cabine?</p>
 <p>Eu lembro daquele momento como se eu pudesse recriar</p>
@@ -43,7 +43,7 @@
 <p>Eu ainda sinto sua ausência</p>
 <p>A agonia de continuar sempre assim</p>
 <p>Ela ainda me persegue sem desistência</p>
-<p>Por que me entrego facil mas nao admito.</p>
+<p>Por que me entrego fácil mas não admito.</p>
 <br></br>
 <p>Um dia vou me livrar dos dêmonios que me assombram</p>
 <p>E o sol voltará a nascer de forma triunfante</p>
