--- a/Projects/IC/index.html
+++ b/Projects/IC/index.html
@@ -31,7 +31,7 @@
     <![endif]-->
     <script type="text/javascript" src="/assets/plugins/jquery-1.11.2.min.js"></script>
     <script>$(function(){$("#second").load("/assets/html/secondary.html"); });</script>
-    <script>$(function()$("#head").load("/assets/html/header.html"); </script>
+    <script>$(function()$("#head").load("/assets/html/headerIndex.html"); </script>
 
 
 
