--- a/Projects/index.html
+++ b/Projects/index.html
@@ -40,7 +40,8 @@
 
 <body>
     <!-- ******HEADER****** --> 
-    <header class="header" id="head">
+    <header class="header">
+        <div class="container" id = "head">
     </header><!--//header-->
     
     <div class="container sections-wrapper">
