--- a/assets/html/headerIndex.html
+++ b/assets/html/headerIndex.html
@@ -6,7 +6,7 @@
     <ul class =  "list-inline">
     	<li><a href="#perfil">About Me</a></li>
     	<li><a href="#projetos">Latest Projects</a></li>
-    	<li><a href="#learnProj">Learning Projects</a></li>
+    	<!-- <li><a href="#learnProj">Learning Projects</a></li> -->
     	<li><a href="#profExp">Professional Experience</a></li>
     	<li><a href="#gitAct">GitHub Activity</a></li>
     </ul> 
