new landing page

--- a/contos/navegacao.html
+++ b/contos/navegacao.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Overflow by HTML5 UP</title>
+		<title>Navegação</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -29,7 +29,7 @@
 				<p>Por Daniel de Araújo Pereira</p>
 			</header>
 			<section>
-				<p>Ela ficou acordada ao lado da cama a noite toda. Não conseguia dormir. Tinha medo de perder esse momento no qual tudo parecia estar alinhado. Perder essa calmaria. Tinha medo que os grandes navegadores estivessem certos: que antes de uma grande tempestade vem a calmaria, tão serena e tranquila que tudo parece que vai terminar bem mas de repente o vento sopra e o mar agita. Tinha medo de que se dormisse ia perder tudo, ia perde-lo e perder a si mesma. </p>
+				<p>Ela ficou acordada ao lado da cama a noite toda. Não conseguia dormir. Tinha medo de perder esse momento no qual tudo parecia estar alinhado. Perder essa calmaria. Tinha medo que os grandes navegadores estivessem certos: que antes de uma grande tempestade vem a calmaria, tão serena e tranquila que tudo parece que vai terminar bem mas de repente o vento sopra e o mar agita. Tinha medo de que se dormisse fosse perder tudo, ia perde-lo e perder a si mesma. </p>
 				<p>Estava indo tudo muito bem, bem demais. Era um sentimento estranho para ela. Poder curtir o momento, sem muitas preocupações, sem muitas duvidas. Duvida. Ah, que criatura inconveniente: Bateu na porta e tocou a campainha, todavia ela não ouviu o ruído ou não se importou. Estava admirando, enquanto podia, o céu tão azul e limpo que se confundia com o mar calmo e sereno. </p>
 				<p>A porta da frente da casa não estava trancada. Abriu, entrou e começou a admirar a sala, toda azulada. Sacou seu pincel do coldre e dirigiu-se delicadamente, para não ser percebido, à escada. </p>
 				<p>Ela queria que ele estivesse acordado, para admirar a paisagem com ela. Ele dormia pois acreditava que ao acordar nada teria mudado. Ela, entretanto, sabia a verdade. Tentou acordá-lo para dividir os últimos segundos de tranquilidade com ele, mas seus esforços foram em vão. </p>	<p>O vento começara a soprar no quarto. Era uma brisa agradável, mas o suficiente para fazê-la pegar um casaco para proteger-se do frio. Foi até o armário e pegou um moletom para ela e outro para ele. Enquanto isso, a maçaneta da porta começou a girar. Sem perder tempo, o intruso se propôs a desenhar pequenos círculos brancos na parede azulada. </p>
