--- a/contos/reabilitacao.html
+++ b/contos/reabilitacao.html
@@ -46,7 +46,7 @@
 
 				<p>Doer já não sabia mais. Mas sabia que doeu muito. Era mais parecido como uma crise de abstinência e ela era sua droga. Ele tem consciência que não era saudável, mas vê-la, senti-la, toca-la, fazia seu cérebro elevar infinitamente seu numero de sinapses. Era bom, tudo parecia ser exatamente como deveria ser, até as promessas serem quebradas pela 5a vez, até ele fazer loucuras para sentir-se como sentiu na primeira vez que ficaram juntos. Mas nunca mais será assim. Nunca mais foi assim. Já nem lembra se fora assim. Atualmente eram todas ruins, mas ainda assim ele as ansiava.</p>
 
-				<p>O único problema é drogas são mais fáceis de superar. Digo, elas não ligam atrás de você. Não batem na porta da sua casa prometendo que dessa vez a alta seria legal e argumentando de modo completamente lógico – pelo menos para ele – que ela falava a verdade. Talvez o jeito seja, por enquanto, continuar deitado.</p>
+				<p>O único problema é que drogas são mais fáceis de superar. Digo, elas não ligam atrás de você. Não batem na porta da sua casa prometendo que dessa vez a alta seria legal e argumentando de modo completamente lógico – pelo menos para ele – que ela falava a verdade. Talvez o jeito seja, por enquanto, continuar deitado.</p>
 
 				<p>Depois de alguns meses, ele percebeu que sua teoria estava esquivocada. Por que, depois desse tempo todo, ele estava muito pior sem ela. Apesar de ter a mesma silhueta que ela, uma voz tão macia e aconchegante como a de sua amada, entretanto traiçoeira, não era ela sua sedutora, mas sim uma das serias que nadavam nas profundezas mais obscuras de sua alma agitada. A sombra dessa criatura imitava os movimentos da verdadeira, fazendo com que ele mesclasse as imagens.  </p>
 
