--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 							<ul class="icons">
 								<li><a href="https://linkedin.com/in/dpereira14" class="fa-linkedin">LinkedIn</a></li>
 								<li><a href="https://github.com/ddearauj/" class="fa-github">GitHub</a></li>
-								<li><a href="https://medium.com/@dpereira14/" class="fa-medium">Medium</a></li>
-							</ul>
+<!-- 								<li><a href="https://medium.com/@dpereira14/" class="fa-medium">Medium</a></li>
+ -->							</ul>
 						</footer>
 					</section>
 
